assets/css/main.css
/* remove left and right padding from bootstrap columns */
div[class*="col-md"] {
  padding: 0;
}

#overallWrapper{
  margin-top:40px;
}

#visualizationWrapper{
  height:850px;
  text-align:center;
  border-top: 1px solid darkgrey;
  border-bottom: 1px solid darkgrey;
  border-left: 1px solid darkgrey;
  border-right: 1px solid darkgrey;
}

#filterbarWrapper{
  margin: 0;
}

#progressbarWrapper{
  margin: 0;
  padding-bottom: 10px;
  border-bottom: 1px solid darkgrey;
}

#treeVisualizationWrapper{
  box-shadow: none !important;
  margin-left: -150px;
  position: relative;
  z-index: 1;
}

#contextInfoColumn{
  height:850px;
  border-top: 1px solid darkgrey;
  border-right: 1px solid darkgrey;
  border-bottom: 1px solid darkgrey;
}

#contextInfoContainer{
  padding-top:20px;
  padding-bottom:20px;
}

